# opensmith

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Install.md  Makefile  Readme.md  opensmith.sln
Audio/: Audio.cpp  Audio.h  Audio.vcxproj  Audio.vcxproj.filters  CMakeLists.txt  CircularBuffer.h  NoteDetector.cpp  NoteDetector.h  VorbisDecoder.cpp  VorbisDecoder.h  notes.cpp  notes.h
PsarcReader/: BigEndianReader.cpp  BigEndianReader.h  CMakeLists.txt  Keys.h  MemoryReader.cpp  MemoryReader.h  PSARC.cpp  PSARC.h  PsarcReader.vcxproj  PsarcReader.vcxproj.filters  Sng.cpp  Sng.h  StreamReader.cpp  StreamReader.h
Rijndael/: CMakeLists.txt  Rijndael.vcxproj  Rijndael.vcxproj.filters  rijndael.h
Settings/: CMakeLists.txt  Settings.cpp  Settings.h  Settings.vcxproj
Setup/: Setup.cpp  Setup.vcxproj  Setup.vcxproj.filters
Test/: Test.vcxproj  test.cpp
Tuner/: Tuner.vcxproj  Tuner.vcxproj.filters  tuner.cpp
Vocals/: CMakeLists.txt  Vocals.cpp  Vocals.h  Vocals.vcxproj  Vocals.vcxproj.filters
Wem/: CMakeLists.txt  Wem.cpp  Wem.h  Wem.vcxproj  Wem.vcxproj.filters  bitstream.cpp  bitstream.h  codebook.cpp  codebook.h  crc.cpp  crc.h
cmake/: CompilerWarnings.cmake  Conan.cmake
lib/: libogg_static.lib  libvorbis_static.lib  portaudio_x86.lib  zlib_stat_debug.lib  zlib_stat_release.lib
opensmith/: CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Filesystem.cpp  Filesystem.h  GameState.cpp  GameState.h  Hud.cpp  Hud.h  Logger.cpp  Logger.h  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Setup.cpp  Setup.h  Sprite.cpp  Sprite.h  Text2D.cpp  Text2D.h  Texture.cpp  Texture.h  Tuner.cpp  Tuner.h  View.cpp  View.h  WaveDemo.cpp  WaveDemo.h  main.cpp  opensmith.vcxproj  opensmith.vcxproj.filters  resource.h  util.cpp  util.h
opensmith/GameStates/: GameState.h  Menu.cpp  Menu.h  Session.cpp  Session.h  Setup.cpp  Setup.h  Tuner.cpp  Tuner.h
portaudio/: CMakeLists.txt
resources/shaders/: Hud.fs  Hud.vs  Text2D.vs  gauge.fs  gauge.vs  main.fs  main.vs  waveform.fs  waveform.vs
resources/textures/: 256.dds  anchor.dds  bar.dds  fret.dds  fretnumbers_Inconsolata128.dds  note.dds  note_fretmute.dds  note_miss.dds  note_palmmute.dds  open_sustain.dds  string.dds  sustain.dds  text_Inconsolata29.dds
tinyxml2/: tinyxml2.vcxproj
